# PFDCalculator

./: .gitignore  CMakeLists.txt  Coeff.cpp  Coeff.h  Coeff.tpp  GreekLetters.h  Poly.cpp  Poly.h  Poly.tpp  README.md  main.cpp
tests/: gt_Poly.cpp
